projet_gl/src/test/deca/context/valid/3_70/3_70_3_Field_ident.deca
// Description:
//    Programme minimaliste faisant un field_ident avec extends
//
// Resultats:
//
// Historique:
//    cree le 19/01/2024

class A {
    int x1;
    int y;
}

class B {
    A a;
}

{
    B b = new B();
    b.a.y;
}